--- a/my-quiz/package.json
+++ b/my-quiz/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Beki78.github.io/code-quiz",
+  "homepage": "https://Beki78.github.io/code-quiz/",
   "name": "my-quiz",
   "private": true,
   "version": "0.0.0",
